src/test/deca/context/valid/init_cont_val_01.deca
// Description:
//    Initialisation et typage
//
// Resultats:
//
//
// Historique:
//    cree le 01/01/2023

{
   int a = 4;
   float b = 4.1;
   boolean c = true;
}
