src/test/deca/context/invalid/init_cont_inval_01.deca
// Description:
//    Initialisation et typage
//
// Resultats:
//    Ligne 11: Affectation de types incompatibles.
//
// Historique:
//    cree le 01/01/2023

{
   int a = true;
}
